Project tabelogo {
  database_type: 'PostgreSQL'
}

Table users {
  user_id bigserial [primary key]
  email varchar [unique, not null]
  hashed_password  varchar [not null]
  active boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    email
  }
}

Table places {
  google_id varchar [primary key, not null] // google return place_id for place detail
  tw_display_name varchar [not null]
  jp_display_name varchar [not null, default: '']
  tw_formatted_address varchar [not null]
  tw_weekday_descriptions "varchar[]" [not null, default: '{}']
  administrative_area_level_1 varchar [not null, default: '']
  country varchar [not null, default: '']
  google_map_uri varchar [not null]
  international_phone_number varchar [not null, default: '']
  lat numeric [not null] 
  lng numeric [not null]
  primary_type varchar [not null, default: '']
  rating numeric [not null, default: 0]
  types "varchar[]" [not null, default: '{}']
  user_rating_count integer [not null, default: 0]
  website_uri varchar [not null, default: '']
  place_version integer [not null, default: 1] // version for place detail
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    google_id
  }
}

Table favorites {
  is_favorite boolean [not null, default:  true]
  user_email varchar [not null, ref: > users.email]
  google_id varchar [not null, ref: > places.google_id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    (user_email, google_id) [unique, pk]
  }
  
}

Table sessions {
  session_id uuid [primary key]
  email varchar [not null, ref: > users.email]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    session_id
  }
}

